--- a/src/app.css
+++ b/src/app.css
@@ -1,10 +1,10 @@
 body {
   background: #8D6E63; 
-  font-family: arial;
   color: #000;
   padding:0;
   margin:0;
   padding-bottom: 40px;
+  font-family: 'Quicksand', sans-serif;
 }
 .add-btn{color: #6D4C41;}
 .delete-btn{color: #6D4C41;}
@@ -16,6 +16,21 @@ body {
 .margin-top-3x{margin-top:40px;}
 .list-group{border-radius: 0px;}
 .toolbar{border-bottom: 1px solid #E0E0E0;}
+
+.header{
+  font-family: 'Lobster', cursive;
+  color: #fff;
+} 
+.header h1{
+  -webkit-text-stroke: 1px black;
+   color: white;
+   text-shadow:
+      3px 3px 0 #212121,
+     -1px -1px 0 #212121,  
+      1px -1px 0 #212121,
+      -1px 1px 0 #212121,
+      1px 1px 0 #212121;
+}
 
 .content{
   padding:0;
@@ -76,8 +91,7 @@ textarea{
   border: none;
   border-left: 1px solid #E0E0E0;
   font-size: 16px;
-  font-family: sans-serif;
-  
+
   width:100%;
   height: 100%;
   height: 612px;
