--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Lobster|Quicksand:400,700');
+
 body {
   background: #8D6E63; 
   color: #000;
